--- a/securityService/pom.xml
+++ b/securityService/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>securityservice</artifactId>
+    <artifactId>securityService</artifactId>
 
 
 </project>
