--- a/consoleservice/pom.xml
+++ b/consoleservice/pom.xml
@@ -78,6 +78,23 @@
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+            <fork>true</fork>
+        </configuration>
+        </plugin>
+        </plugins>
+    </build>
 
 </project>
