取消serverService的moduel，新增openstackService，用于处理与Openstack相关联的操作，云服务器

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>gateways</module>
         <module>securityService</module>
         <module>normalservice</module>
+        <module>openstackService</module>
     </modules>
 
     <!--以下dependency来自官方-->
