登录模块，添加信息到uauth_tocken,并把信息存入redis中，并做页面参数跳转，注意：页面跳转不完善，需要优化

--- a/securityService/pom.xml
+++ b/securityService/pom.xml
@@ -83,5 +83,9 @@
             <artifactId>commons-codec</artifactId>
             <version>1.9</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 </project>
