--- a/consoleservice/pom.xml
+++ b/consoleservice/pom.xml
@@ -93,6 +93,11 @@
             <artifactId>commons-codec</artifactId>
             <version>1.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.mcylm.claySystem</groupId>
+            <artifactId>securityService</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
