--- a/paymentservice/src/main/resources/application.yml
+++ b/paymentservice/src/main/resources/application.yml
@@ -7,15 +7,19 @@ eureka:
       defaultZone: http://localhost:6080/eureka/  #注册中心地址
   instance:
     hostname: localhost
-    instance-id: http://localhost:6084
+    instance-id: http://localhost:6085
 server:
-  port: 6084
+  port: 6085
 
 ##数据库连接信息
 spring.datasource.url: jdbc:mysql://59.110.235.199:3306/claySystem?characterEncoding=utf-8
 spring.datasource.username: root
 spring.datasource.password: hdidcNO.F-2
 spring.datasource.driver-class-name: com.mysql.jdbc.Driver
+spring.datasource.max-active: 20
+spring.datasource.max-idle: 8
+spring.datasource.min-idle: 8
+spring.datasource.initial-size: 10
 
 spring.redis.host: 59.110.235.199
 spring.redis.port: 6379
@@ -28,7 +32,7 @@ spring.redis.pool.min-idle: 0
 spring.redis.timeout: 0
 
 spring.freemarker.allow-request-override: false
-spring.freemarker.cache: true
+spring.freemarker.cache: false
 spring.freemarker.check-template-location: true
 spring.freemarker.charset: UTF-8
 spring.freemarker.content-type: text/html
