晚上redis工具类，登录模块，以及忘记密码修改密码

--- a/securityService/pom.xml
+++ b/securityService/pom.xml
@@ -94,6 +94,13 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun.mns</groupId>
+            <artifactId>aliyun-sdk-mns</artifactId>
+            <version>1.1.8</version>
+            <classifier>jar-with-dependencies</classifier>
+        </dependency>
+
     </dependencies>
 
 </project>
