支付接口完成

--- a/paymentservice/pom.xml
+++ b/paymentservice/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>paymentservice</artifactId>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <java.version>1.8</java.version>
     </properties>
     <!--添加spring-boot-starter-web依赖 -->
@@ -72,6 +73,7 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -83,6 +85,7 @@
                     <fork>true</fork>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
