--- a/securityService/pom.xml
+++ b/securityService/pom.xml
@@ -94,6 +94,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
+            <version>2.5</version>
         </dependency>
         <dependency>
             <groupId>com.aliyun.mns</groupId>
