--- a/userservice/pom.xml
+++ b/userservice/pom.xml
@@ -75,6 +75,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
+            <version>2.5</version>
         </dependency>
 
         <dependency>
