--- a/staticservice/src/main/resources/application.yml
+++ b/staticservice/src/main/resources/application.yml
@@ -28,15 +28,15 @@ server:
 #  typeAliasesPackage: com.mcylm.clay.service.normalservice.model
 #  mapperLocations: classpath:mapper/*.xml
 
-#spring.redis.host: 59.110.235.199
-#spring.redis.port: 6379
-#spring.redis.password=
-#spring.redis.database: 1
-#spring.redis.pool.max-active: 8
-#spring.redis.pool.max-wait: -1
-#spring.redis.pool.max-idle: 500
-#spring.redis.pool.min-idle: 0
-#spring.redis.timeout: 0
+spring.redis.host: 59.110.235.199
+spring.redis.port: 6379
+spring.redis.password=
+spring.redis.database: 1
+spring.redis.pool.max-active: 8
+spring.redis.pool.max-wait: -1
+spring.redis.pool.max-idle: 500
+spring.redis.pool.min-idle: 0
+spring.redis.timeout: 0
 
 #spring.freemarker.allow-request-override: false
 #spring.freemarker.cache: false
