--- a/staticservice/src/main/resources/application.yml
+++ b/staticservice/src/main/resources/application.yml
@@ -30,7 +30,7 @@ server:
 
 spring.redis.host: 59.110.235.199
 spring.redis.port: 6379
-spring.redis.password=
+#spring.redis.password=
 spring.redis.database: 1
 spring.redis.pool.max-active: 8
 spring.redis.pool.max-wait: -1
